renamed model Artwork to Board

--- a/templates/boards/add_artworks.html
+++ b/templates/boards/add_artworks.html
@@ -1,4 +1,4 @@
-{% extends 'artworks/base.html' %}
+{% extends 'boards/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_context %}
