--- a/templates/tag_test.html
+++ b/templates/tag_test.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-    <img src="{{ url_for('tag_test_feed', artwork_id='{}'.format(artwork_id)) }}" alt="Mapped View" class="image-world"
+    <img src="{{ url_for('tag_test_feed', board_id='{}'.format(board_id)) }}" alt="Mapped View" class="image-world"
          width="30px" height="15px">
 </div>
 
