--- a/templates/torch_new.html
+++ b/templates/torch_new.html
@@ -9,7 +9,7 @@
 
   <div class="split left">
     <div class="container">
-      <img src="{{ url_for('mapped_gaze_torch_feed', artwork_id='{}'.format(artwork_id)) }}" alt="Mapped View" class="image-world" width="30px" height="15px">
+      <img src="{{ url_for('mapped_gaze_torch_feed', board_id='{}'.format(board_id)) }}" alt="Mapped View" class="image-world" width="30px" height="15px">
     </div> 
   </div>
 </body>
