--- a/templates/waldo.html
+++ b/templates/waldo.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-{#      <img src="{{ url_for('mapped_gaze_feed', artwork_id='{}'.format(artwork_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">#}
+{#      <img src="{{ url_for('mapped_gaze_feed', board_id='{}'.format(board_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">#}
         <img id="artworkImg" alt="Image">
     </div>
 
