--- a/templates/boards/simple_board.html
+++ b/templates/boards/simple_board.html
@@ -11,7 +11,6 @@
         const pointerSize = {{ pointer_size }};
     </script>
     <script src="{{ url_for('static', filename='js/openCV.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/simpleCanvasHandler.js') }}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/aruco/cv.js') }}"></script>
@@ -57,10 +56,17 @@
         }
 
         .background {
-            display: block;
-            max-width: 100vw;
-            max-height: 100vh;
+            position: absolute;
+            max-width: 90vw;
+            max-height: 90vh;
+            height: 90%;
+            width: 90%;
             object-fit: contain; /* Scale image to fit without cropping or distortion */
+            /* center the image */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            pointer-events: auto; /* Enable pointer events */
         }
 
         .marker_parent {
@@ -69,6 +75,13 @@
             width: 100%;
             height: 100%;
             z-index: 100;
+            pointer-events: none; /* Disable pointer events */
+        }
+
+        .position-relative {
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
 
         .marker {
@@ -86,9 +99,14 @@
 <div id="arucoTag2" class="tag upper-left"></div>
 <div id="arucoTag3" class="tag upper-right"></div>
 
-<div id="bg">
-    {% for stimulus_path in stimuli_paths %}
-        <img id="bgImage"  class="background" alt="backgroundImage" src="../../{{ stimulus_path }}">
+<div id="bg" class="position-relative">
+    {% for stimulus in stimuli %}
+        {% if stimulus.stim_type.value == 0 %}
+            <img id="bgImage"  class="background" alt="backgroundImage" src="../../{{ stimulus.file_path }}">
+        {% elif stimulus.stim_type.value == 2 %}
+            <iframe id="bgVideo" class="background" src="https://www.youtube.com/embed/{{ stimulus.file_path }}?autoplay=1&mute=1">
+            </iframe>
+        {% endif %}
     {% endfor %}
 </div>
 <div id="markerParent" class="marker_parent">
