--- a/templates/boards/simple_board.html
+++ b/templates/boards/simple_board.html
@@ -103,6 +103,11 @@
     {% for stimulus in stimuli %}
         {% if stimulus.stim_type.value == 0 %}
             <img id="bgImage"  class="background" alt="backgroundImage" src="../../{{ stimulus.file_path }}">
+        {% elif stimulus.stim_type.value == 1 %}
+            <video id="bgVideo" class="background" autoplay muted controls>
+                <source src="../../{{ stimulus.file_path }}" type="video/mp4" style="pointer-events: auto;">
+                Your browser does not support the video tag.
+            </video>
         {% elif stimulus.stim_type.value == 2 %}
             <iframe id="bgVideo" class="background" src="https://www.youtube.com/embed/{{ stimulus.file_path }}?autoplay=1&mute=1">
             </iframe>
